Use non-deprecated method
Signed-off-by: Craig Perkins <cwperx@amazon.com>